--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -913,4 +913,135 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 }
-/*# sourceMappingURL=main.css.map */
+
+.portfolio-hero {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--backgound-color);
+}
+
+.portfolio-title-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 34px;
+}
+
+.portfolio-hero .container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.portfolio-btn {
+  padding: 6px 22px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  background: #f5f4fa;
+  border-style: none;
+  min-width: 73px;
+  height: 38px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+  color: var(--backgound-color);
+  background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio-hero-section-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
+}
+
+.portfolio-hero-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.portfolio-hero-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.portfolio-hero-list-content {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.portfolio-hero-list-item {
+  width: 370px;
+  height: 404px;
+  border: 1px solid #eeeeee;
+}
+
+.portfolio-hero-list-item:hover {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.portfolio-hero-list-item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.portfolio-hero-list-item:not(:nth-child(n + 7)) {
+  margin-bottom: 30px;
+}
+
+.portfolio-hero-section-subtitle {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: var(--description-subtitle-color);
+}
+
+.portfolio-hero-link {
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.image-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-hero-link:hover,
+.portfolio-hero-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-hero-list-item:hover .portfolio-hero-list-description {
+  transform: translatey(0%);
+}
+
+.portfolio-hero-list-description {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 63px;
+  padding-left: 24px;
+  padding-bottom: 63px;
+  padding-right: 24px;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translatey(100%);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.555;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+/*# sourceMappingURL=portfolio.css.map */
